Test: float: right; (line 2111) to make braille collection stop overflowing mobile screen

--- a/css/views-styles.css
+++ b/css/views-styles.css
@@ -2108,6 +2108,10 @@ span.daisy-icon-login {
 	}
 }
 
+span.views-field-field-file-resource div.file-size-warning-wrapper {
+	float: right;
+}
+
 /* @end */
 /* @group file icons */
 
@@ -2632,6 +2636,7 @@ span.daisy-icon-login {
 	visibility: hidden;
 	display: none;
 }
+
 
 /* @end */
 
